--- a/logger.ini
+++ b/logger.ini
@@ -30,7 +30,7 @@ datefmt=%Y-%m-%d %H:%M:%S
 
 log_colors={
     'DEBUG': 'green',
-    'INFO': 'cyan',
+    'INFO': 'blue',
     'WARNING': 'yellow',
     'ERROR': 'red',
     'CRITICAL': 'bold_red'}
